--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <hr>
 
                     <div class="">
-                        <label for="exampleInputEmail1">Credit Card Number :</label>
+                        <label for="CreditCardNumber">Credit Card Number :</label>
                         <div class="form-group input-group">
                             <input type="text" oninput="this.value=this.value.replace(/[^0-9]/g,'');" class="form-control" placeholder="XXXX  XXXX  XXXX  XXXX" aria-describedby="card-numnber" id="cardnumber" autocomplete="off" maxlength="16">
                             <span class="input-group-addon" id="basic-addon2">
@@ -31,18 +31,18 @@
 
                     <div class="">
                         <div class="form-group">
-                            <label for="exampleInputEmail1">Name on the Card :</label>
+                            <label for="CardName">Name on the Card :</label>
                             <input type="text" class="form-control" placeholder="Please Enter the Name" aria-describedby="name-on-the-card">
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="form-group col-lg-3 col-md-3 col-sm-3">
-                            <label for="exampleInputEmail1">Expiry Date :</label>
+                            <label for="ExpiryDate">Expiry Date :</label>
                             <input type="text" class="form-control" placeholder="MM  /  YY" aria-describedby="expiry-date" id="expiry-date" maxlength="5">
                         </div>
                         <div class="form-group col-lg-3 col-md-3 col-sm-3">
-                            <label for="exampleInputEmail1">CVV :</label>
+                            <label for="CVV">CVV :</label>
                             <input type="password" class="form-control" placeholder="XXX " aria-describedby="CVV" maxlength="3">
                         </div>
                         <div class="form-group col-lg-6 col-md-6 col-sm-6"></div>
